--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
                   <p class="mail"><a href="#">fahsyasya@gmail.com</a></p>
                   <p>Personal Portofolio</p>
                   <ul class="wd-social-icon m-top">
-                    <li><a href="facebook.com/SvperNoir/"><i class="icon-facebook1"></i></a></li>
-                    <li><a href="instagram.com/fhsyams"><i class="icon-instagram"></i></a></li>
-                    <li><a href="linkedin.com/in/fahmisyams/"><i class="icon-linkedin"></i></a></li>
+                    <li><a href="https://facebook.com/SvperNoir/"><i class="icon-facebook1"></i></a></li>
+                    <li><a href="https://instagram.com/fhsyams"><i class="icon-instagram"></i></a></li>
+                    <li><a href="https://linkedin.com/in/fahmisyams/"><i class="icon-linkedin"></i></a></li>
                   </ul>
                 </div>
                 <div class="bottom">
