--- a/index.html
+++ b/index.html
@@ -1910,7 +1910,7 @@
     <footer>
     <div class="footer">
       <p>Copyright <a href="#">Fahmi Syams</a>©2020 - 2025. All rights reserved.</p>
-      <img class="logo-footer" src="images/flogo-footer-light.jpg" alt="images">
+      <img class="logo-footer" src="images/flogo-footer-light.png" alt="images">
       <img class="logo-footer-dark" src="images/flogo-footer-dark.png" alt="images">
     </div>
     </footer>
