--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             <a href="#"><img class="img-1" src="images/home/img-1.png" alt="image"></a>
                           </div>
                           <div class="inner2">
-                            <a href="#about" class="img-about wedo-link-item"><img src="images/home/img-2.png" alt="image"> <h4>About Us</h4></a>
+                            <a href="#about" class="img-about wedo-link-item"><img src="images/home/img-2.png" alt="image"> <h4>About Me</h4></a>
                           </div>
                       </div>
                       <div class="ct-middle wow fadeInUp">
