--- a/index.html
+++ b/index.html
@@ -1549,10 +1549,10 @@ Product Development (Parfum & Kosmetik). Bisa masuk ke industri fragrance, skinc
                       <span class="icon-note icon"></span>
                       <span>Hi!</span>
                       &ensp;
-                      <p>Contact Us</p>
+                      <p>Contact Me</p>
                     </div>
                     <h1 class="title">
-                      Contact Us<span>.</span>
+                      Contact Me<span>.</span>
                     </h1>
                   </div>
                   <div class="box-title">
@@ -1589,7 +1589,7 @@ Product Development (Parfum & Kosmetik). Bisa masuk ke industri fragrance, skinc
                   <div class="inner-left">
                     <span><i class="icon-location"></i>Contact Location</span>
                   </div>
-                  <h3>14/4, Bonosri, USA.</h3>
+                  <h3>Bogor, Indonesia</h3>
                 </div>
               </div>
               <div class="wd-post-comment">
