--- a/index.html
+++ b/index.html
@@ -290,35 +290,32 @@
                   
                 </div>
                 <p class="mb15">
-                  Nullam dui dui, cursus at velit sit amet, condimentum aliquam nisi. Facilisis nibh vitae enim viverra
-                  mattis. Proin purus tortor, aliquet vel, ullamcorper consequat felis. Nullam tincidunt finibus
-                  pretium. auctor vitae nulla a tristique. Vestibulum viverra ipsum.
+                  Saya adalah seorang Graphic Designer & Visual Creative dengan pengalaman lebih dari 6 tahun dalam industri kreatif. Menguasai berbagai software desain seperti Adobe Creative Suite, serta 3D modeling dengan Blender dan Maya untuk menciptakan visual yang dinamis dan inovatif.
+
+Selain itu, saya juga memanfaatkan teknologi AI dalam berbagai aspek kreatif, mulai dari desain visual, editing video, hingga sound production, untuk menghasilkan karya yang lebih efisien dan impactful.
                 </p>
-                <p>Integer non sapien justo. Fusce feugiat viverra tellus, eu interdum enim varius nec. Etiam laoreet
-                  augue mauris, sit amet convallis nibh congue id. Fusce justo leo, imperdiet a massa id, lacinia mollis
-                  diam. Vestibulum commodo euismod mauris. Suspendisse accumsan volutpat nibh at dictum. Cras
-                  condimentum leo justo, ut venenatis mauris tempor.</p>
+                <p>Saya selalu berusaha menghadirkan kreativitas yang segar dan berorientasi pada estetika, dengan pendekatan yang adaptif terhadap perkembangan teknologi desain.</p>
                 </div>
                 <div class="content">
   
                     <div class="inner-top">
                       <div class="content-left br-left">
                         <h4>Name</h4>
-                        <p>Donald L. Juarez</p>
+                        <p>Fahmi Syams</p>
                       </div>
                       <div class="content-right">
                         <h4>Phone</h4>
-                        <p>+99 (555) 666 88 55</p>
+                        <p>+62 817 769 169</p>
                       </div>
                     </div>
                     <div class="inner-bottom">
                       <div class="content-left br-left br-bottom">
-                        <h4>Office</h4>
-                        <p>1247/Plot No. 39, New York.</p>
+                        <h4>Address</h4>
+                        <p>Kota Bogor, Jawa Barat, Indonesia 16119.</p>
                       </div>
                       <div class="content-right br-bottom">
                         <h4>Experience</h4>
-                        <p>12 Years</p>
+                        <p>6 Years+</p>
                       </div>
                     </div>
                 </div>
@@ -1633,7 +1630,7 @@ Product Development (Parfum & Kosmetik). Bisa masuk ke industri fragrance, skinc
     <!-- Footer -->
     <footer>
     <div class="footer">
-      <p>Copyright <a href="#">Fahmi Syams</a>©2020 - 2025. All rights reserved.</p>
+      <p>Copyright <a href="#">Fahmi Syams</a> ©2020 - 2025. All rights reserved.</p>
       <img class="logo-footer" src="images/flogo-footer-light.png" alt="images">
       <img class="logo-footer-dark" src="images/flogo-footer-dark.png" alt="images">
     </div>
