--- a/index.html
+++ b/index.html
@@ -1556,8 +1556,7 @@ Product Development (Parfum & Kosmetik). Bisa masuk ke industri fragrance, skinc
                   
                   
                 </div>
-                <p>Nullam dui dui, cursus at velit sit amet, condimentum aliquam nisi. Facilisis nibh vitae enim viverra
-                  mattis. Proin purus tortor, aliquet vel, ullamcorper consequat felis.</p>
+                <p>Butuh desain yang profesional dan impactful? Saya siap membantu! Dari graphic design, 3D modeling, hingga AI-powered visuals, sound, dan video, saya akan memastikan setiap karya yang dibuat sesuai dengan visi dan kebutuhan Anda.</p>
               </div>
               <!-- <div class="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3445.3210101890018!2d-97.73587714092555!3d30.28492176241068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b59b2584cfb7%3A0x8131ee4f174a21de!2sThe%20University%20of%20Texas%20at%20Austin!5e0!3m2!1sen!2s!4v1681981942966!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
