--- a/index.html
+++ b/index.html
@@ -1584,7 +1584,7 @@ Product Development (Parfum & Kosmetik). Bisa masuk ke industri fragrance, skinc
               <div class="wd-post-comment">
                 <div class="title-cmt">
                   <h3>Send A Message</h3>
-                  <p>Nunc velit metus, volutpat elementum euismod eget, cursus nec nunc.</p>
+                  <p>Sisipkan pesan anda.</p>
                 </div>
                 <form method="post">
                   <div class="group-input">
