--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 </div>
                 <div class="bottom">
                   <a class="btn-profile active wedo-link-item" href="#contact" >Hire Me!<span class="icon-arrow"></span></a>
-                  <a class="btn-profile wedo-link-item" href="/cv-fahmisyams.pdf">Download CV <span class="icon-arrow"></span></a>
+                  <a class="btn-profile wedo-link-item" href="/cvfahmi/cv-fahmisyams.pdf">Download CV <span class="icon-arrow"></span></a>
                 </div>
               </div>
             </div>
