--- a/index.html
+++ b/index.html
@@ -339,8 +339,7 @@ Selain itu, saya juga memanfaatkan teknologi AI dalam berbagai aspek kreatif, mu
                   </div>
   
                   <p>
-                    Nullam dui dui, cursus at velit sit amet, condimentum aliquam nisi. Facilisis nibh vitae enim viverra
-                    mattis. Proin purus tortor, aliquet vel, ullamcorper consequat felis.
+                    -
                   </p>
   
                 </div>
@@ -348,37 +347,28 @@ Selain itu, saya juga memanfaatkan teknologi AI dalam berbagai aspek kreatif, mu
                   <div class="col-lg-12">
                     <div class="tf-box-resume animate-down" >
                       <ul class="inner-left">
-                        <li>University of Pennsylvania</li>
-                        <li>2016</li>
+                        <li>MTs. Al-Ghazaly</li>
+                        <li>2010</li>
                       </ul>
-                      <h4 class="inner-right"><a href="#"> Bachelor Degree Of Design</a></h4>
+                      <h4 class="inner-right"><a href="#"> Sekola Muslim terpadu</a></h4>
                     </div>
                   </div>
                   <div class="col-lg-12">
                     <div class="tf-box-resume animate-down" >
                       <ul class="inner-left">
-                        <li>Princeton University</li>
-                        <li>2018</li>
+                        <li>SMK Infokom Bogor</li>
+                        <li>2013</li>
                       </ul>
-                      <h4 class="inner-right"><a href="#"> Certificate of web Development training</a></h4>
+                      <h4 class="inner-right"><a href="#"> Jurusan Multimedia</a></h4>
                     </div>
                   </div>
                   <div class="col-lg-12">
                     <div class="tf-box-resume animate-down">
                       <ul class="inner-left">
-                        <li>Defodil University</li>
-                        <li>2020</li>
+                        <li>Bina Sarana Informatika (BSI)</li>
+                        <li><span>(Running)</span> 2022</li>
                       </ul>
-                      <h4 class="inner-right"><a href="#"> Certificate of UX/UI training</a></h4>
-                    </div>
-                  </div>
-                  <div class="col-lg-12">
-                    <div class="tf-box-resume animate-down">
-                      <ul class="inner-left">
-                        <li>Startart University</li>
-                        <li><span>(Running)</span> 2023</li>
-                      </ul>
-                      <h4 class="inner-right"><a href="#"> Certificate of Java training</a></h4>
+                      <h4 class="inner-right"><a href="#"> Management Informatika</a></h4>
                     </div>
                   </div>
                 </div>
