--- a/index.html
+++ b/index.html
@@ -441,8 +441,17 @@ Selain itu, saya juga memanfaatkan teknologi AI dalam berbagai aspek kreatif, mu
                   
                 </div>
                 <p>
-                  Nullam dui dui, cursus at velit sit amet, condimentum aliquam nisi. Facilisis nibh vitae enim viverra
-                  mattis. Proin purus tortor, aliquet vel, ullamcorper consequat felis.
+                  Saya selalu mengutamakan kualitas dan kepuasan klien dalam setiap proyek yang saya kerjakan. Dengan pengalaman lebih dari 6 tahun di industri kreatif, saya menawarkan layanan terbaik dalam:
+
+✅ High-Quality Graphic Design – Desain yang estetis, modern, dan sesuai dengan identitas brand.
+✅ 3D Modeling & Animation – Visual realistis dan animasi dinamis dengan Blender & Maya.
+✅ AI-Powered Creativity – Menggunakan teknologi AI untuk menghasilkan desain, video, dan sound yang inovatif.
+✅ Custom & Tailored Solutions – Setiap desain dibuat khusus untuk mencerminkan visi dan kebutuhan klien.
+✅ Fast & Professional Work – Komunikasi yang responsif, deadline yang tepat waktu, dan hasil yang memuaskan.
+
+Saya percaya bahwa desain bukan hanya sekadar estetika, tetapi juga alat yang kuat untuk membangun brand dan menciptakan pengalaman yang berkesan.
+
+Siap berkolaborasi? Hubungi saya sekarang! 🚀
                 </p>
               </div>
               <div class="row">
